<resources>
    <string name="app_name">West Wing Quiz</string>
    <string name="hint_text">Enter Name to Continue</string>
    <string name="button0">Next</string>
    <string name="intro">How much do you know about American Presidents?</string>
    <string name="greeting">Hello, %s! Which president is pictured above? </string>
    <string name="question1a">James Garfield</string>
    <string name="question1b">Gerald Ford</string>
    <string name="question1c">John Tyler</string>
    <string name="question1d">John Adams</string>
    <string name="question2">Which presidents have won a grammy?</string>
    <string name="question2a">Ronald Reagan</string>
    <string name="question2b">Bill Clinton</string>
    <string name="question2c">Jimmy Carter</string>
    <string name="question2d">Barack Obama</string>
    <string name="question3">Calvin Coolidge had a secret services agents searching for what item before Herbert Hoover\s inauguration?</string>
    <string name="question3a">A phone</string>
    <string name="question3b">A jacket</string>
    <string name="question3c">A boot</string>
    <string name="question3d">A book</string>
    <string name="question4">Which of these phrases was popularized by Teddy Roosevelt?</string>
    <string name="question4a">Nailing jelly to the wall</string>
    <string name="question4b">MollyCoddle</string>
    <string name="question4c">Square Deal</string>
    <string name="question4d">In for a penny, in for a pound</string>
    <string name="question5">Which of these men was the only president to be censured by Congress?</string>
    <string name="question5a">Jed Bartlet</string>
    <string name="question5b">Martin Van Buren</string>
    <string name="question5c">Thomas Jefferson</string>
    <string name="question5d">Andrew Jackson</string>
    <string name="question6">How many of President John Tyler\'s grandchildren are still living?</string>
    <string name="question6a">2</string>
    <string name="question6b">4</string>
    <string name="question6c">0</string>
    <string name="question6d">1</string>
    <string name="question7">Name this president.</string>
    <string name="answer7">calvin coolidge</string>
    <string name="question8">Which of these were Abraham Lincoln\'s favorite foods?</string>
    <string name="question8a">Bacon</string>
    <string name="question8b">Apples</string>
    <string name="question8c">Raspberry jam</string>
    <string name="question8d">Gingerbread Cookies</string>
    <string name="score">%1$s, You got %2$d out of 8 correct!</string>
</resources>
